<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">
        <RadioButton
            style="@style/Material.Drawable.RadioButton"
            android:id="@+id/radio_gio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pirates"
            android:onClick="onRadioButtonClicked"
            />
        <RadioButton
            style="@style/Material.Drawable.RadioButton"
            android:id="@+id/radio_ngay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ninjas"
            android:onClick="onRadioButtonClicked"
          />
    </RadioGroup>

    <TextView
        android:id="@+id/txtNguoi"
        android:textSize="20dp"
        android:textColor="#000"
        android:text="Bạn là người ?"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="41dp" />
    <com.rey.material.widget.CheckBox
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_below="@id/txtNguoi"
        android:onClick="onCheckboxClicked"
        android:id="@+id/checkbox_1"
        style="@style/Material.Drawable.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meat"/>
    <com.rey.material.widget.CheckBox
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_below="@id/checkbox_1"
        android:onClick="onCheckboxClicked"
        android:id="@+id/checkbox_2"
        style="@style/Material.Drawable.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheese"/>
    <com.rey.material.widget.CheckBox
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_below="@id/checkbox_2"
        android:onClick="onCheckboxClicked"
        android:id="@+id/checkbox_3"
        style="@style/Material.Drawable.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meata"/>
    <com.rey.material.widget.CheckBox
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_below="@id/checkbox_3"
        android:onClick="onCheckboxClicked"
        android:id="@+id/checkbox_4"
        style="@style/Material.Drawable.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheesea"/>
    <com.rey.material.widget.CheckBox
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_below="@id/checkbox_4"
        android:onClick="onCheckboxClicked"
        android:id="@+id/checkbox_5"
        style="@style/Material.Drawable.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meatư"/>
    <com.rey.material.widget.CheckBox
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_below="@id/checkbox_5"
        android:onClick="onCheckboxClicked"
        android:id="@+id/checkbox_6"
        style="@style/Material.Drawable.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheeseư"/>
    <com.rey.material.widget.Button
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_below="@id/checkbox_6"
        android:id="@+id/btnOK"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OK"
        app:rd_enable="true"/>

    <com.rey.material.widget.Spinner
        android:id="@+id/array_spinner"
        style="@style/Material.Widget.Spinner"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_30sdp"
        app:rd_style="@style/Material.Drawable.Ripple.Wave"
        android:layout_alignBottom="@+id/checkbox_1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="41dp"
        android:layout_marginEnd="41dp" />

    <com.rey.material.widget.Button
        android:gravity="center"
        android:id="@+id/btnRecyclerView"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:text="RecyclerView"
        app:rd_enable="true"
        android:layout_alignBaseline="@+id/btnOK"
        android:layout_alignBottom="@+id/btnOK"
        android:layout_alignRight="@+id/array_spinner"
        android:layout_alignEnd="@+id/array_spinner"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp" />


</RelativeLayout>